# psplines

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: ci.yml  docs.yml
api/basis/: index.html
api/core/: index.html
api/optimize/: index.html
api/penalty/: index.html
api/utils/: index.html
contributing/: index.html
docs/: contributing.md  index.md  roadmap.md
docs/api/: basis.md  core.md  density.md  glm.md  optimize.md  penalty.md  utils.md  whittaker.md
docs/examples/: gallery.md
docs/theory/: mathematical-background.md
docs/tutorials/: advanced-features.md  basic-usage.md  parameter-selection.md  uncertainty-methods.md
docs/user-guide/: core-concepts.md  getting-started.md  installation.md  quick-start.md
examples/: 01_basic_usage.py  02_parameter_selection.py  03_uncertainty_methods.py  04_real_world_application.py  README.md
examples/gallery/: index.html
scripts/: test_docs.py
search/: search_index.json
src/psplines/: __init__.py  basis.py  core.py  density.py  exceptions.py  glm.py  optimize.py  penalty.py  utils.py  utils_math.py  whittaker.py
stylesheets/: extra.css
tests/: conftest.py  test_adaptive.py  test_basis.py  test_core.py  test_glm.py  test_optimize.py  test_penalty.py  test_shape.py  test_whittaker.py
theory/mathematical-background/: index.html
tutorials/advanced-features/: index.html
tutorials/basic-usage/: index.html
tutorials/parameter-selection/: index.html
tutorials/uncertainty-methods/: index.html
user-guide/core-concepts/: index.html
user-guide/getting-started/: index.html
user-guide/installation/: index.html
user-guide/quick-start/: index.html
